<resources>
    <string name="app_name">Seljuk Empire (Events And Characters)</string>
    <string name="app_desc">Every thing about the Seljuk Empire from its first establishment in the Turkish tribe of Qanq until their demise
        at the hands of the Khwarazmians in the east and the Mongols after that in the west. With a revised proposal of the most
        prominent effective fingers in the Seljuk Empire</string>

    <string name="characters">Characters</string>
    <string name="events">Events</string>
    <string name="menu_rate">Rate App</string>
    <string name="menu_moreApps">More Apps</string>
    <string name="menu_contactMe">Contact Me</string>
    <string name="aboutApp">About This App</string>
    <string name="share_by">Share With</string>
    <string name="download_now_on">\nGet from Google Play</string>
    <string name="youDontHaveEmailApp">You may don\'t have an email application</string>
    <string name="choseApp">Chose App</string>
    <string name="writeYourMsgdownHere">Write your message down here</string>
    <string name="version">Version</string>
    <string name="developer">Developer</string>
    <string name="close">Close</string>
    <string name="allowPermision">Please give the permission to perform the operation</string>
    <string name="connectToTheInternet">Connect to the Internet and</string>
    <string name="retry">Retry</string>
    <string name="showAdMessage">I\'m annoying you! but your clicks are my death die</string>
    <string name="title_activity_page">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

    </string>
    <string name="action_settings">Settings</string>
    <string name="ic_baseline_arrow_backforward_24">@drawable/ic_baseline_arrow_back_24</string>
    <string name="Cancel">Cancel</string>
    <string name="availableLangueges">Available Languages</string>
    <string name="open_in_browser">Open In Browser</string>
    <string name="other_available_languages">Other Available Languages</string>
    <string name="loadingData">Loading Data For You \nloading texts and images from Internet happens first time only</string>
    <string name="lightMode">Light Mode</string>
    <string name="app_nameKh">History Of Khwarazmian State</string>
    <string name="app_descKh">The history of Khwarazmian State (1190 – 1220). Listed headlines with the most
        prominent effective fingers. It found by Atsuz Khwarizm Shah at the end of the last Seljuk Empire sultans Sanjar bin Malik Shah
    and demise by Mongols. happy reading for you!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>