<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="?attr/colorOnBackground"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/aboutApp"
            app:titleTextColor="#fff"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_nameKh"
            android:textStyle="bold"
            android:id="@+id/tvAppName"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_descKh"
            android:textSize="14sp"
            android:id="@+id/tvAppDesc"
            android:layout_marginTop="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.0 (1)"
            android:textSize="14sp"
            android:id="@+id/tvVersion"
            android:layout_marginTop="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Eng. Mohammed Sadiq : www.BeladSoft.com"
            android:textSize="14sp"
            android:layout_marginTop="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/gmail_dev"
                android:padding="5dp"
                android:id="@+id/ivMyGmail"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/facebook_dev"
                android:layout_marginEnd="12dp"
                android:padding="5dp"
                android:layout_marginStart="12dp"
                android:id="@+id/ivMyFacebook"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/whatsapp_dev"
                android:id="@+id/ivMyWhatsapp"
                android:padding="5dp"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>